frame/support/test/tests/pallet_ui/event_005.stderr
error: Invalid `type Event`, associated type `Event` is reserved and must bound: `From<Event>` or `From<Event<Self>>` or `From<Event<Self, I>>`
 --> $DIR/event_005.rs:9:3
  |
9 |         type Event: IsType<<Self as frame_system::Trait>::Event>;
  |         ^^^^
